--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-        
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+
     <title>Pokedex</title>
 </head>
 
@@ -16,7 +17,7 @@
 
     </header>
     <main>
-        <article>
+        <section class="d-flex flex-column">
             <div>
                 <h1>Pokédex</h1>
             </div>
@@ -24,7 +25,7 @@
                 <form>
                     <section>
                         <label for="busqueda">Nombre o numero</label>
-                        <input type="search" name="busqueda" id="busqueda">
+                        <input type="search" name="busqueda" id="busqueda" class="border">
                         <button><i class="bi bi-search"></i></button>
                     </section>
                 </form>
@@ -34,22 +35,199 @@
             </section>
             <section>
                 <label for="orden">Ordernar por:</label>
-                <select name="orden" id="orden">
+                <select class="border" name="orden" id="orden">
                     <option value="NumInf">Numero inferior a mayor</option>
                     <option value="NumMay">Numero mayor a inferior</option>
                     <option value="A-Z">De A - Z</option>
                     <option value="Z-A">De Z - A</option>
                 </select>
             </section>
-            <section>
-                <div class="card" style="width: 18rem;">
-                    <img src="./img/bulbasaur.png" class="card-img-top" alt="bulbasaur-001">
-                    <div class="card-body">
-                      <p class="card-text"></p>
+            <article class="row justify-content-evenly">
+                <section class="col-lg-3">
+                    <div class="card tam-card">
+                        <img src="./img/bulbasaur.png" class="card-img-top w-50" alt="bulbasaur-001">
+                        <div class="card-body">
+                            <p class="card-text">N° 001</p>
+                            <h3>Bulbasaur</h3>
+                            <section class=" d-flex  ">
+                                <div class="w-50 text-center border">
+                                    <p>Planta</p>
+                                </div>
+                                <div class="w-50 text-center border">
+                                    <p>Veneno</p>
+                                </div>
+                            </section>
+                        </div>
                     </div>
-                  </div>
-            </section>
-        </article>
+                </section>
+                <section class="col-lg-3">
+                    <div class="card tam-card">
+                        <img src="./img/Ivysaur.png" class="card-img-top w-50" alt="Ivysaur-002">
+                        <div class="card-body">
+                            <p class="card-text">N° 002</p>
+                            <h3>Ivysaur</h3>
+                            <section class=" d-flex  ">
+                                <div class="w-50 text-center border">
+                                    <p>Planta</p>
+                                </div>
+                                <div class="w-50 text-center border">
+                                    <p>Veneno</p>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </section>
+                <section class="col-lg-3">
+                    <div class="card tam-card">
+                        <img src="./img/Venusaur.png" class="card-img-top w-50" alt="Venusaur-003">
+                        <div class="card-body">
+                            <p class="card-text">N° 003</p>
+                            <h3>Venusaur</h3>
+                            <section class=" d-flex  ">
+                                <div class="w-50 text-center border">
+                                    <p>Planta</p>
+                                </div>
+                                <div class="w-50 text-center border">
+                                    <p>Veneno</p>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </section>
+                <section class="col-lg-3">
+                    <div class="card tam-card">
+                        <img src="./img/charmander.png" class="card-img-top w-50" alt="charmander-004">
+                        <div class="card-body">
+                            <p class="card-text">N° 004</p>
+                            <h3>charmander</h3>
+                            <section class=" d-flex  ">
+                                <div class="w-50 text-center border">
+                                    <p>fuego</p>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </section>
+                <section class="col-lg-3">
+                    <div class="card tam-card">
+                        <img src="./img/charmeleon.png" class="card-img-top w-50" alt="charmmeleon-005">
+                        <div class="card-body">
+                            <p class="card-text">N° 005</p>
+                            <h3>charmmeleon</h3>
+                            <section class=" d-flex  ">
+                                <div class="w-50 text-center border">
+                                    <p>fuego</p>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </section>
+                <section class="col-lg-3">
+                    <div class="card tam-card">
+                        <img src="./img/charizard.png" class="card-img-top w-50" alt="charrizard-006">
+                        <div class="card-body">
+                            <p class="card-text">N° 006</p>
+                            <h3>charrizard</h3>
+                            <section class=" d-flex  ">
+                                <div class="w-50 text-center border">
+                                    <p>fuego</p>
+                                </div>
+                                <div class="w-50 text-center border">
+                                    <p>volador</p>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </section>
+                <section class="col-lg-3">
+                    <div class="card tam-card">
+                        <img src="./img/Squirtle.png" class="card-img-top w-50" alt="Squirtle-007">
+                        <div class="card-body">
+                            <p class="card-text">N° 007</p>
+                            <h3>Squirtle</h3>
+                            <section class=" d-flex  ">
+                                <div class="w-50 text-center border">
+                                    <p>Agua</p>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </section>
+                <section class="col-lg-3">
+                    <div class="card tam-card">
+                        <img src="./img/Wartortle.png" class="card-img-top w-50" alt="wartortle-008">
+                        <div class="card-body">
+                            <p class="card-text">N° 008</p>
+                            <h3>Wartortle</h3>
+                            <section class=" d-flex  ">
+                                <div class="w-50 text-center border">
+                                    <p>Agua</p>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </section>
+                <section class="col-lg-3">
+                    <div class="card tam-card">
+                        <img src="./img/blastoise.png" class="card-img-top w-50" alt="blastoise-009">
+                        <div class="card-body">
+                            <p class="card-text">N° 009</p>
+                            <h3>blastoise</h3>
+                            <section class=" d-flex  ">
+                                <div class="w-50 text-center border">
+                                    <p>Agua</p>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </section>
+                <section class="col-lg-3">
+                    <div class="card tam-card">
+                        <img src="./img/caterpie.png" class="card-img-top w-50" alt="caterpie-010">
+                        <div class="card-body">
+                            <p class="card-text">N° 010</p>
+                            <h3>caterpie</h3>
+                            <section class=" d-flex  ">
+                                <div class="w-50 text-center border">
+                                    <p>Bicho</p>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </section>
+                <section class="col-lg-3">
+                    <div class="card tam-card">
+                        <img src="./img/metapod.png" class="card-img-top w-50" alt="metapod-011">
+                        <div class="card-body">
+                            <p class="card-text">N° 011</p>
+                            <h3>metapod</h3>
+                            <section class=" d-flex  ">
+                                <div class="w-50 text-center border">
+                                    <p>bicho</p>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </section>
+                <section class="col-lg-3">
+                    <div class="card tam-card">
+                        <img src="./img/butterfree.png" class="card-img-top w-50" alt="butterfree-012">
+                        <div class="card-body">
+                            <p class="card-text">N° 012</p>
+                            <h3>butterfree</h3>
+                            <section class=" d-flex  ">
+                                <div class="w-50 text-center border">
+                                    <p>bicho</p>
+                                </div>
+                                <div class="w-50 text-center border">
+                                    <p>volador</p>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </section>
+            </article>
+        </section>
     </main>
     <footer>
 
