agregado del responsive

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div>
                 <h1>Pokédex</h1>
             </div>
-            <section class="d-flex justify-content-evenly flex-column flex-md-row py-3 bg-success">
-                <form class="col-md-6">
+            <section class="d-flex justify-content-center align-items-center flex-column flex-md-row py-3 bg-secondary-subtle w-100">
+                <form class="col-12 col-sm-6">
                     <section class="d-flex flex-column">
                         <label for="busqueda" class="fs-5">Nombre o numero</label>
                         <sectio>
@@ -33,8 +33,8 @@
                     </section>
                 </form>
 
-                <section class="w-50 border col-md-6">
-                    <p class="fs-4">Busca un Pokémon por su nombre o su numero de la Pokédex Nacional.</p>
+                <section class=" col-lg-3 col-md-5 col-12 col-sm-6 my-3">
+                    <p class="fs-4 border rounded-3 bg-success">Busca un Pokémon por su nombre o su numero de la Pokédex Nacional.</p>
                 </section>
             </section>
             <section class="py-3">
@@ -48,7 +48,7 @@
             </section>
 
             <article class="row justify-content-evenly w-75 bg-light ">
-                <section class="col-lg-3 pt-3 col-md-4 col-sm-6">
+                <section class="col-xl-3 pt-3 col-lg-4 col-sm-6 ">
                     <div class="card tam-card plant1">
                         <img src="./img/bulbasaur.png" class="card-img-top w-50" alt="bulbasaur-001">
                         <div class="card-body">
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="col-lg-3 pt-3 col-md-4 col-sm-6">
+                <section class="col-xl-3 pt-3 col-lg-4 col-sm-6 ">
                     <div class="card tam-card plant2">
                         <img src="./img/Ivysaur.png" class="card-img-top w-50" alt="Ivysaur-002">
                         <div class="card-body">
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="col-lg-3 pt-3 col-md-4 col-sm-6">
+                <section class="col-xl-3 pt-3 col-lg-4 col-sm-6 ">
                     <div class="card tam-card plant3">
                         <img src="./img/Venusaur.png" class="card-img-top w-50" alt="Venusaur-003">
                         <div class="card-body">
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="col-lg-3 pt-3 col-md-4 col-sm-6">
+                <section class="col-xl-3 pt-3 col-lg-4 col-sm-6 ">
                     <div class="card tam-card fire1">
                         <img src="./img/charmander.png" class="card-img-top w-50" alt="charmander-004">
                         <div class="card-body">
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="col-lg-3 pt-3 col-md-4 col-sm-6">
+                <section class="col-xl-3 pt-3 col-lg-4 col-sm-6 ">
                     <div class="card tam-card fire2">
                         <img src="./img/charmeleon.png" class="card-img-top w-50" alt="charmmeleon-005">
                         <div class="card-body">
@@ -127,7 +127,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="col-lg-3 pt-3 col-md-4 col-sm-6">
+                <section class="col-xl-3 pt-3 col-lg-4 col-sm-6 ">
                     <div class="card tam-card fire3">
                         <img src="./img/charizard.png" class="card-img-top w-50" alt="charrizard-006">
                         <div class="card-body">
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="col-lg-3 pt-3 col-md-4 col-sm-6">
+                <section class="col-xl-3 pt-3 col-lg-4 col-sm-6 ">
                     <div class="card tam-card water1">
                         <img src="./img/Squirtle.png" class="card-img-top w-50" alt="Squirtle-007">
                         <div class="card-body">
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="col-lg-3 pt-3 col-md-4 col-sm-6">
+                <section class="col-xl-3 pt-3 col-lg-4 col-sm-6 ">
                     <div class="card tam-card water2">
                         <img src="./img/Wartortle.png" class="card-img-top w-50" alt="wartortle-008">
                         <div class="card-body">
@@ -172,7 +172,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="col-lg-3 pt-3 col-md-4 col-sm-6">
+                <section class="col-xl-3 pt-3 col-lg-4 col-sm-6 ">
                     <div class="card tam-card water3">
                         <img src="./img/blastoise.png" class="card-img-top w-50" alt="blastoise-009">
                         <div class="card-body">
@@ -186,7 +186,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="col-lg-3 pt-3 col-md-4 col-sm-6">
+                <section class="col-xl-3 pt-3 col-lg-4 col-sm-6 ">
                     <div class="card tam-card bug1">
                         <img src="./img/caterpie.png" class="card-img-top w-50" alt="caterpie-010">
                         <div class="card-body">
@@ -200,7 +200,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="col-lg-3 pt-3 col-md-4 col-sm-6">
+                <section class="col-xl-3 pt-3 col-lg-4 col-sm-6 ">
                     <div class="card tam-card bug2">
                         <img src="./img/metapod.png" class="card-img-top w-50" alt="metapod-011">
                         <div class="card-body">
@@ -214,7 +214,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="col-lg-3 pt-3 col-md-4 col-sm-6">
+                <section class="col-xl-3 pt-3 col-lg-4 col-sm-6 ">
                     <div class="card tam-card bug3">
                         <img src="./img/butterfree.png" class="card-img-top w-50" alt="butterfree-012">
                         <div class="card-body">
